small fix to anner description mobile view and popular section list

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,7 @@ main{
     justify-content: space-between;
     gap: 16px ;
     margin-bottom: 24px;
+    padding-left: 20px;
 }
 
 .li-popular{
@@ -256,7 +257,7 @@ main{
     .banner{
         margin-bottom: 24px;
         width: 99%;
-        height: 500px;
+        min-height: 500px;
         padding: 32px 24px;
         background-position: center;
         box-sizing: border-box;
@@ -268,10 +269,13 @@ main{
     }
 
     .banner-desc{
-        width:92%;;
+        max-width:92%;;
         text-align: center;
+        font-size: .875rem;
         line-height: 1.5rem;
         padding-bottom: 32px;
+        max-height: 150px;
+        overflow: hidden;
     }
 
     .place-select{
